--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sludge World",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive",
+    "test": "nyc --reporter=lcov mocha --recursive",
     "lint": "eslint ."
   },
   "keywords": [
@@ -19,9 +19,10 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^4.19.1",
-    "mocha": "^4.1.0"
+    "mocha": "^4.1.0",
+    "nyc": "^13.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.11"
   }
 }
