Run ESLint as a pretest task
This change makes `npm test` invoke the `lint` task before starting,
so we don't forget to lint, and can have our CI fail on linting
errors.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nyc --reporter=lcov mocha --recursive",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "pretest": "npm run lint"
   },
   "keywords": [
     "MUD"
